[gd_scene load_steps=4 format=3 uid="uid://dnncwpgt41buo"]

[ext_resource type="Script" path="res://scenes/UI/pause_screen.gd" id="1_fhuq5"]
[ext_resource type="FontFile" uid="uid://ubn564mq81hg" path="res://fonts/ariblk.ttf" id="2_7o0qs"]

[sub_resource type="LabelSettings" id="LabelSettings_pt52p"]
font = ExtResource("2_7o0qs")
font_size = 131
outline_size = 17
outline_color = Color(0, 0, 0, 1)
shadow_size = 37
shadow_color = Color(0, 0, 0, 0.87451)
shadow_offset = Vector2(12.109, 12.113)

[node name="Pause Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fhuq5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -332.0
offset_bottom = 332.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "GAME
PAUSED"
label_settings = SubResource("LabelSettings_pt52p")
horizontal_alignment = 1

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7o0qs")
theme_override_font_sizes/font_size = 92
text = "RESUME"

[node name="Retry" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7o0qs")
theme_override_font_sizes/font_size = 92
text = "RETRY"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7o0qs")
theme_override_font_sizes/font_size = 92
text = "OPTIONS"

[node name="Quit to Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7o0qs")
theme_override_font_sizes/font_size = 92
text = "QUIT TO MENU"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit to Menu" to="." method="_on_quit_to_menu_pressed"]
